[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 79

[tool.poetry]
name = "membrane"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"
repository = "https://github.com/jcmdln/membrane"
authors = ["Johnathan C. Maudlin <jcmdln@gmail.com>"]
packages = [{ include = "membrane" }]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "20.8b1"
#coverage = "^5.3"
flake8 = "^3.8.4"
#molecule = "^3.1.2"
mypy = "^0.790"
poetry = "^1.1.3"
pydocstyle = "^5.1.1"
pyls-black = "^0.4.6"
#pytest = "^6.1.1"
#sphinx = "^3.2.1"
#tox = "^3.20.1"

[tool.poetry.dev-dependencies.python-language-server]
extras = [
    "flake8",
    "mccabe",
    "pycodestyle",
    "pydocstyle",
    "pyflakes",
    "pylint",
    "rope",
]
version = "^0.35.1"

[tool.poetry.scripts]
membrane = "membrane.main:main"
